Fix z-index issues

--- a/SoloLearn/src/styles/Discuss/QuestionItem.scss
+++ b/SoloLearn/src/styles/Discuss/QuestionItem.scss
@@ -35,7 +35,7 @@
 			font-size: 12px;
 			padding-top: 5px;
 			> div {
-				z-index: 2;
+				z-index: 1;
 			}
 			.question-item-date {
 				color: #777777;
